[Fix] Navigation links Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,16 @@ header {
 .navbar {
     display: flex;
     justify-content: space-between;
+    gap: 3rem;
     align-items: center;
 }
 
 .nav-links-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 3rem;
+    width: 100%;
 }
 
 .nav-links {
@@ -97,7 +100,7 @@ header {
 
 .auth-buttons {
     display: flex;
-    gap: 1rem;
+    gap: .5rem;
 }
 
 .auth-buttons .btn {
@@ -113,10 +116,17 @@ header {
     border-radius: 12px;
 }
 
-.auth-buttons .btn:hover {
+.auth-buttons .btn.register {
+    /* border-color: var(--text-black); */
+    width: 100%;
+    box-shadow: 1px 2px 8px var(--text-gray);
+
+}
+
+.auth-buttons .register:hover {
     color: var(--text-black);
-    border-color: var(--text-black);
-    transform: translateY(-2px);
+    border: 2px solid var(--text-black);
+    /* transform: translateY(-2px); */
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -169,9 +179,10 @@ header {
 }
 
 .hero-content .learn-more:hover {
-    background-color: var(--text-gray);
-    color: var(--background-color);
-    transform: translateY(-2px);
+    background-color: transparent;
+    color: var(--text-black);
+    border: 2px solid var(--text-black);
+    /* transform: translateY(-2px); */
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -193,7 +204,7 @@ header {
     max-width: 500px;
     height: 500px;
     object-fit: cover;
-    border-radius: 12px;
+    /* border-radius: 12px; */
 }
 
 /* Update the mobile menu button styles */
@@ -202,7 +213,8 @@ header {
     background: none;
     border: none;
     cursor: pointer;
-    z-index: 1001; /* Increased z-index to be above the menu */
+    z-index: 1001;
+    /* Increased z-index to be above the menu */
 }
 
 .mobile-menu-btn img {
@@ -228,13 +240,15 @@ header {
     display: block;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
     header {
         padding: 1rem 2rem;
     }
-    .close-icon{
+
+    .close-icon {
         display: none;
     }
+
     .navbar {
         flex-direction: column;
         align-items: flex-start;
@@ -336,7 +350,7 @@ header {
         margin-top: 2rem;
     }
 
-    .auth-buttons .btn {
+    .auth-buttons .btn.register {
         border-color: var(--text-black);
         width: 100%;
     }
@@ -391,12 +405,12 @@ header {
 }
 
 /* Enable hover on desktop */
-@media (min-width: 769px) {
-  .dropdown.active .hover-element {
-    display: block;
-  }
+@media (min-width: 600px) {
+    .dropdown.active .hover-element {
+        display: block;
+    }
 
-  .dropdown-btn {
-    cursor: pointer;
-  }
+    .dropdown-btn {
+        cursor: pointer;
+    }
 }
